app/src/App.css
.text {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 20px;
}

.image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

/* HOMEPAGE */
#homepage {
  margin-top: 40px;
}


/* ALLPROJECTS */
.flex-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

.individual-flex {
  display: flex;
  background-color: lightgray;
  flex: 1 0 0;
  width: 50%;
  flex-basis: 33.333333%;
  padding: 10px;
  border: 3px solid white;
  border-radius: 15px;
  justify-content:space-around;
}

a {
  color: #006D77;
  text-align: center;
}

.all-title {
  color: #006D77;
  font-size: 25px;
  font-weight: bold;
  margin-top: 5px;
}

#flex-container {
  margin-top: 15px;
}

/* SINGLE PROJECTS */

#single-image {
  margin-bottom: 20px;
}

#first-column {
  text-align: center;
}

#second-column {
  margin-top: 75px;
}

#word-wrap {
  word-wrap: break-word;
}

